Updated Nav style

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,6 +1,6 @@
 //color
-$grey : #FFAD4F;
+$grey : #e1a7e1;
 
 //navigation color
 $navigation-background : $grey;
-$nav-text-color : chocolate;
+$nav-text-color : #ffffd2;
