--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -4,3 +4,9 @@ $grey : #e1a7e1;
 //navigation color
 $navigation-background : $grey;
 $nav-text-color : #ffffd2;
+
+
+//clock section///
+$clock-text-color : white;
+$clock-background-color : #B5D0E2;
+$clock-border-color : #2099E8;
